--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-        <img src="talimul.jpg" style="width: 300px;" alt="Talimul Islam's Photo" title="Talimul Islam">
+        <img src="https://raw.githubusercontent.com/talimulislam05/HTML-Tag-References/main/talimul.jpg" style="width: 300px;" alt="Talimul Islam's Photo" title="Talimul Islam">
 
         <figcaption>This is the photo of <strong>Talimul Islam</strong> </figcaption>
 
